# mlshowcase

./: .clever.json  .env  .gitignore  Cargo.toml  README.md  Rocket.toml  buff  init.sql
migrations/2020-11-19-090237_create_datasets/: down.sql  up.sql
migrations/2020-11-19-160603_populate_datasets/: down.sql  up.sql
src/: error.rs  generation.rs  lib.rs  main.rs  processing.rs  routes.rs  schema.rs
src/data/: generation.rs  mod.rs  processing.rs
src/db/: datasets.rs  mod.rs
src/handlers/: generation.rs  mod.rs  processing.rs
src/models/: data.rs  dataset.rs
src/routes/: data.rs  datasets.rs  kmeans.rs  mod.rs  routes.rs
static/: datasets  index.html
static/style/: mvp.css  style.css
