[package]
name = "ml-showcase"
version = "0.1.0"
authors = ["Axel Baudot <axel.baudot@ecoco2.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.20"
rand = "0.7"
rand_distr = "0.3"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = {version = "1.0", features = ["derive"] }
