[package]
name = "ml-showcase"
version = "0.1.0"
authors = ["Axel Baudot <axel.baudot@ecoco2.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.20", features = ["serde-serialize"] }
rand = "0.7"
rand_distr = "0.3"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]
