[package]
name = "ml-showcase"
version = "0.1.0"
authors = ["Axel Baudot <axel.baudot@proton.com>"]
edition = "2018"

[[bin]]
name = "ml-showcase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "serde_json"] }
nalgebra = { version = "0.20", features = ["serde-serialize"] }
rand = "0.7"
rand_distr = "0.3"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]
